--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "generator-fabricator-starter",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A yeoman generator to start your fabricator toolkit.",
   "main": "app/index.js",
   "files": [
     "generators"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "version": "npm test",
     "postversion": "git push && git push --tags"
   },
