--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/dietergeerts/generator-fabricator-starter#readme",
   "dependencies": {
-    "generator-npm-init": "^1.2.3",
+    "generator-npm-init": "1.3.0",
     "yeoman-generator": "0.24.1",
-    "yosay": "^1.2.1"
+    "yosay": "1.2.1"
   }
 }
