--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/dietergeerts/generator-fabricator-starter#readme",
   "dependencies": {
     "generator-npm-init": "1.3.0",
+    "lodash": "4.17.2",
     "yeoman-generator": "0.24.1",
     "yosay": "1.2.1"
   }
